메뉴등록, 그림활성화, 카테고리 재수정 (개드립첨가)

--- a/werim_project/src/main/resources/static/css/cartegori2.css
+++ b/werim_project/src/main/resources/static/css/cartegori2.css
@@ -49,3 +49,18 @@
 	margin: 0 auto;
 	overflow: hidden;
 }
+
+#demos .owl-carousel .item{
+	height: 55rem;
+	background: rgb(37, 191, 218);
+	padding: 1rem;
+	
+	margin-left: 20px;
+	margin-bottom	: 20px;
+	
+}
+
+#demos .d{
+	display: flex;
+	
+}
