--- a/werim_project/src/main/resources/templates/chicken.html
+++ b/werim_project/src/main/resources/templates/chicken.html
@@ -20,72 +20,58 @@
 </head>
 
 <body>
+
  <!-- Page Content -->
-	<div class="container" th:fragment="chicken_contents">
-		
-			
-			
-			
-				<!-- Page Features -->
-    <div class="row text-center">
-
-      <div class="col-lg-3 col-md-6 mb-4" th:fragment="chicken_contents">
-        <div class="card h-100">
-          <img class="card-img-top" src="/images/kyochon.jpg" alt="">
-          <div class="card-body">
-            <h4 class="card-title">교촌치킨</h4>
-            <p class="card-text">1978년 창업한 대구통닭이 간장치킨의 원조이고 다른 치킨 브랜드와 달리 간장치킨이 간판 메뉴이다.
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">  주    문  </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="/images/puradak.jpg" alt="">
-          <div class="card-body">
-            <h4 class="card-title">푸라닭</h4>
-            <p class="card-text">'순수함＇을 뜻하는 'PURA'와 닭을 뜻하는 'DAK'의 합성어(푸라+닭)로 "치킨도 요리다"라는 
-            					순수한 믿음을 가진 순수한 사람들이 만들어 가는 브랜드를 표현하기 위해 탄생한 브랜드이다.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">  주    문  </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="/images/bhc.jpg" alt="" height="300">
-          <div class="card-body">
-            <h4 class="card-title">BHC</h4>
-            <p class="card-text">1997년 별하나치킨이라는 이름으로 창립했으며 그 유명한 콜팝을 필두로 야채치킨 등의 
-            	특이한 제품으로 마이너적인 인기를 누리다가 2000년에 이니셜을 따서 BHC라는 이름을 앞세우게 되었다</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">  주    문  </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="/images/goobne.jpg" alt="" height="300">
-          <div class="card-body">
-            <h4 class="card-title">굽네치킨</h4>
-            <p class="card-text">기름진 후라이드 치킨을 잘 안 먹는 사람들을 위한 대표적인 브랜드!</p>
-								<p>지금 바로 만나보세요!</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">  주    문  </a>
-          </div>
-        </div>
-      </div>
-
-    </div>
-			
-		</div>
+	<div  class="container" th:fragment="chicken_contents" >
 	
-</body>
+		<h1 align="center" >치킨의 협곡에 오신걸 환영합니다</h1>
+		<section id="demos" >
+		<div  class="row" >
+		<div class="large-12 columns" >
+		<div class="owl-carousel owl-theme d" >
+
+	<div class="item" th:each="food : ${Store}">
+			<img th:if="${food.logo_file != null}" width="200" height="200" th:src="|data:${food.logo_file.contentType};base64,${food.logo_file.base64}|">
+			<img th:if="${food.logo_file == null}" width="200" height="200" th:src="@{/images/none.png}">
+		<h4 align="center" th:text="${food.name}">1</h4>
+		
+		<div class="card-footer">
+            <a href="#" class="btn btn-primary" />  주    문  </a>
+          </div>
+		</div>
+				
+		
+		</div>
+		</div>
+		</div>
+		</section>
+	
+		<script type="text/javascript">
+		
+		$(document).ready(function(){
+			//jquery 시작!
+			$('.owl-carousel').owlCarousel({
+				loop:true,
+				margin: 10,
+				nav:true,
+				responsive:{
+					0:{
+						items:1
+					},
+					600:{
+						items:3
+					},
+					1000:{
+						items:5
+					}
+				}
+			});
+		});
+		</script>
+		
+		
+		
+		</div>
+	</body>
+	
+	</html>
