--- a/werim_project/src/main/resources/templates/cafe.html
+++ b/werim_project/src/main/resources/templates/cafe.html
@@ -21,68 +21,58 @@
 
 <body>
 
-  <!-- Page Content -->
-	<div class="container" th:fragment="cafe_contents">
+ 
+ <!-- Page Content -->
+	<div  class="container" th:fragment="cafe_contents" >
 	
-    <!-- Page Features -->
-    <div class="row text-center">
+		<h1 align="center" >차들어 커피야</h1>
+		<section id="demos" >
+		<div  class="row" >
+		<div class="large-12 columns" >
+		<div class="owl-carousel owl-theme d" >
 
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="/images/twosome.jpg" alt="" height="300">
-          <div class="card-body">
-            <h4 class="card-title">투썸플레이스</h4>
-            <p class="card-text">힐링 가득한 봄을 만나는 시간</p>
-          </div>
-          <div class="card-footer">
+	<div class="item" th:each="food : ${Store}">
+			<img th:if="${food.logo_file != null}" width="200" height="200" th:src="|data:${food.logo_file.contentType};base64,${food.logo_file.base64}|">
+			<img th:if="${food.logo_file == null}" width="200" height="200" th:src="@{/images/none.png}">
+		<h4 align="center" th:text="${food.name}">1</h4>
+		
+		<div class="card-footer">
             <a href="#" class="btn btn-primary">  주    문  </a>
           </div>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="/images/firedduk.jpg" alt="" height="300">
-          <div class="card-body">
-            <h4 class="card-title">스타벅스</h4>
-            <p class="card-text">전 세계적으로 유명한 커피체인점</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">  주    문  </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="/images/ediya.jpg" alt="" height="300">
-          <div class="card-body">
-            <h4 class="card-title">이디야</h4>
-            <p class="card-text">최첨단 시설에서 탄생하는 고품질의 원두로 최고의 커피맛을 제공합니다.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">  주    문  </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="/images/toms.jpg" alt="" height="300">
-          <div class="card-body">
-            <h4 class="card-title">TOMNTOMS</h4>
-            <p class="card-text">탐앤탐스는 오랜 노하우로 국내외 커피 시장을 선도하며 스페셜티 커피와 갓 구운 따뜻한 프레즐, 문화가 융합된 특별한 공간으로 지금 대한민국을 비롯해 전 세계에서 사랑받는 브랜드입니다.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">  주    문  </a>
-            </div>
-        </div>
-      </div>
-
-    </div>
-			
 		</div>
+				
+		
+		</div>
+		</div>
+		</div>
+		</section>
 	
-</body>
-
-<body>
+		<script type="text/javascript">
+		
+		$(document).ready(function(){
+			//jquery 시작!
+			$('.owl-carousel').owlCarousel({
+				loop:true,
+				margin: 10,
+				nav:true,
+				responsive:{
+					0:{
+						items:1
+					},
+					600:{
+						items:3
+					},
+					1000:{
+						items:5
+					}
+				}
+			});
+		});
+		</script>
+		
+		
+		
+		</div>
+	</body>
+	
+	</html>
