메뉴 수정 페이지 작업중

--- a/werim_project/src/main/resources/templates/user/store/register.html
+++ b/werim_project/src/main/resources/templates/user/store/register.html
@@ -31,8 +31,9 @@
 				$('#img').attr('src', event.target.result);
 			};
 
-		$('#file').on('change',function(result){			
-			reader.readAsDataURL(result.target.files[0]);
+		$('#file').on('change',function(result){
+			if(result != null)
+				reader.readAsDataURL(result.target.files[0]);
 		});
 		</script>
 		</td>
