점포승인기능추가

--- a/werim_project/src/main/resources/templates/user/userList.html
+++ b/werim_project/src/main/resources/templates/user/userList.html
@@ -22,7 +22,7 @@
 			<td th:text="${p.username}">admin</td>
 			<td th:text="${p.mail_address}">kwr@naver.com</td>
 			<td>
-			<input type="checkbox" th:value="${p.storeState}"/></td>
+			<input type="checkbox" th:value="${p.user_id}" name="user_id"/></td>
 			</tr>
 		</tbody>
 	</table>
