비밀번호 변경과 내정보수정 나누기(임시방편)

--- a/werim_project/src/main/resources/templates/user/userLayout.html
+++ b/werim_project/src/main/resources/templates/user/userLayout.html
@@ -32,6 +32,9 @@
 						<a th:href="@{'/user/userUpdate'}">내정보수정</a>
 					</li>
 					<li role="presentation">
+						<a th:href="@{'/user/userpwUpdate'}">비밀번호변경</a>
+					</li>
+					<li role="presentation">
 						<a th:href="@{'/user/userDelete'}">회원탈퇴</a>
 					</li>
 				</ul>
