--- a/werim_project/src/main/resources/templates/user/userpwUpdate.html
+++ b/werim_project/src/main/resources/templates/user/userpwUpdate.html
@@ -103,49 +103,36 @@
 		</div>
 	</nav>
 <body>
-	<div class="container" th:fragment="userUpdate_contents">
+	<div class="container" th:fragment="userpwUpdate_contents">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 				<form action="#" th:action="@{/user/userUpdate}"
 					th:object="${userInfo}" method="post" class="form-horizontal">
-					<h2>회원정보수정</h2>
+					<h2>비밀번호 변경</h2>
 					<div class="form-group">
 						<div class="col-sm-9">
-							<input type="text" th:field="*{username}" class="form-control" readonly />
-							<label th:if="${#fields.hasErrors('username')}"
-								th:errors="*{username}" class="validation-message"></label>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="text" placeholder="E-mail 입력"
-								th:field="*{mail_address}" class="form-control" /> <label
-								th:if="${#fields.hasErrors('mail_address')}"
-								th:errors="*{mail_address}" class="validation-message"></label>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="tel" placeholder="전화 번호" th:field="*{tel}"
-								class="form-control" /> <label
-								th:if="${#fields.hasErrors('tel')}" th:errors="*{tel}"
+							<input type="password" placeholder="현재 비밀번호"
+								th:field="*{password}" class="form-control" required/> <label
+								th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
 								class="validation-message"></label>
 						</div>
 					</div>
 					<div class="form-group">
 						<div class="col-sm-9">
-							<input type="text" id="sample4_postcode" placeholder="우편번호"
-								th:field="*{zonecode}"> <input type="button"
-								onclick="sample4_execDaumPostcode()" value="우편번호 찾기"><br>
-							<input type="text" id="sample4_roadAddress" placeholder="도로명주소"
-								th:field="*{address}"> <input type="text"
-								id="sample4_jibunAddress" placeholder="지번주소"> <span
-								id="guide" style="color: #999; display: none"></span> <input
-								type="text" id="sample4_detailAddress" placeholder="상세주소" th:field="*{address2}">
-							<div class="form-group"></div>
+							<input type="password" placeholder="새 비밀번호"
+								th:field="*{password}" class="form-control" required/> <label
+								th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
+								class="validation-message"></label>
 						</div>
 					</div>
 					<div class="form-group">
+						<div class="col-sm-9">
+							<input type="password" placeholder="새 비밀번호 확인"
+								th:field="*{password2}" class="form-control" required/> <label
+								th:if="${#fields.hasErrors('password2')}"
+								th:errors="*{password2}" class="validation-message"></label>
+						</div>
+					</div>
 						<div class="col-sm-9">
 							<button type="submit" name="update"
 								class="btn btn-primary btn-block">수 정</button>
