--- a/werim_project/src/main/resources/templates/user/userLayout.html
+++ b/werim_project/src/main/resources/templates/user/userLayout.html
@@ -33,8 +33,8 @@
 						<a th:href="@{'/user/userUpdate'}">내정보수정</a>
 					</li>
 					<li>
-						<a th:if="${#authentication.principal.userinfo.store_state != '2'}" th:href="@{/store/request}">점포</a>
-						<a th:if="${#authentication.principal.userinfo.store_state == '2'}" th:href="@{/store/store-list}">점포</a>
+						<a th:if="${#authentication.principal.userinfo.storeState != '2'}" th:href="@{/store/request}">점포</a>
+						<a th:if="${#authentication.principal.userinfo.storeState == '2'}" th:href="@{/store/store-list}">점포</a>
 					</li>
 					<li role="presentation">
 						<a th:href="@{'/user/userpwUpdate'}">비밀번호변경</a>
