카테고리증설

--- a/werim_project/src/main/resources/templates/user/store/register.html
+++ b/werim_project/src/main/resources/templates/user/store/register.html
@@ -69,6 +69,13 @@
 		<option value="-2">카테고리</option>
 		<option value="0">치킨</option>
 		<option value="1">피자</option>
+		<option value="2">중식</option>
+		<option value="3">한식</option>
+		<option value="4">일식/돈까스</option>
+		<option value="5">족발/보쌈</option>
+		<option value="6">야식</option>
+		<option value="7">분식</option>
+		<option value="8">카페/디저트</option>
 		</select>
 		</td>
 	</tr>
