--- a/werim_project/src/main/resources/templates/user/userpwUpdate.html
+++ b/werim_project/src/main/resources/templates/user/userpwUpdate.html
@@ -106,7 +106,7 @@
 	<div class="container" th:fragment="userpwUpdate_contents">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
-				<form action="#" th:action="@{/user/userUpdate}"
+				<form action="#" th:action="@{/user/userpwUpdate}"
 					th:object="${userInfo}" method="post" class="form-horizontal">
 					<h2>비밀번호 변경</h2>
 					<div class="form-group">
@@ -120,17 +120,17 @@
 					<div class="form-group">
 						<div class="col-sm-9">
 							<input type="password" placeholder="새 비밀번호"
-								th:field="*{password}" class="form-control" required/> <label
-								th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
+								th:field="*{password2}" class="form-control" required/> <label
+								th:if="${#fields.hasErrors('password2')}" th:errors="*{password2}"
 								class="validation-message"></label>
 						</div>
 					</div>
 					<div class="form-group">
 						<div class="col-sm-9">
 							<input type="password" placeholder="새 비밀번호 확인"
-								th:field="*{password2}" class="form-control" required/> <label
-								th:if="${#fields.hasErrors('password2')}"
-								th:errors="*{password2}" class="validation-message"></label>
+								th:field="*{password3}" class="form-control" required/> <label
+								th:if="${#fields.hasErrors('password3')}"
+								th:errors="*{password3}" class="validation-message"></label>
 						</div>
 					</div>
 						<div class="col-sm-9">
